# dsbrender

./: .gitignore  CHANGELOG.OLD  CMakeLists.txt  NEW_API.MD  README.MD  TODO.TXT
cmake/: dump-inc.bat  get-vs-includes.cmake  mkdrv.pl  perltools.cmake  projgen.cmake
core/: CMakeLists.txt  defgen.py
core/dll/: brender.def  dllmain.c  dos.def  fixed.def  float.def
core/dosio/: CMakeLists.txt
core/fmt/: CMakeLists.txt
core/fw/: CMakeLists.txt  brbegin.c  brqsort.c  datafile.c  file.c  fwsetup.c  resreg.c
core/host/: CMakeLists.txt  hmouse.c  hook.c  hstvk.c  hstvk.h  hwindow.c  real.asm
core/inc/: CMakeLists.txt  brcompiler.h  brddi.h  brender.h  brerror.h  brfile.h  brhalf.h  brkeycodes.h  brstdlib.h  fw_p.h  host.h  host_p.h  model.h  scalar.h  vfx.h  vfx_p.h
core/math/: CMakeLists.txt
core/pixelmap/: CMakeLists.txt  fntp4x6.c  memloops.asm  pmmem.c
core/std/: CMakeLists.txt  stdfile.c
core/v1db/: CMakeLists.txt  dbsetup.c  otable.c  prepmesh.c  render.c
core/vfx/: CMakeLists.txt  WINVFX16.asm  WINVFX8.asm  WINVFXHC.c
drivers/: CMakeLists.txt
drivers/pentprim/: CMakeLists.txt  fpsetup.asm  plib.c  softprim.def
drivers/softrend/: CMakeLists.txt  softrend.def  v1m_386.asm
drivers/vesa/: CMakeLists.txt
samples/: CMakeLists.txt
samples/MINZB/: CMakeLists.txt  RUNME.BAT  minimal.c
samples/SIMPVIEW/: CMakeLists.txt
samples/dfwlib/: BUFFER.c  CMakeLists.txt  README.MD  brwrap.h  generic.c  winincls.h  winwrap.c
